add 3 more sections along with animations

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
             href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap"
             rel="stylesheet"
         />
+        <link
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
+        />
+
         <title>Sample Home Page</title>
     </head>
     <body>
